--- a/index.html
+++ b/index.html
@@ -1,15 +1,9 @@
-<div style="height:auto; width:auto">
-
+<div style="height: auto; width: auto;">
     <iframe
-
         src="https://ora.sh/embed/2da78dbe-da41-4300-bd8d-1ce389ef8875"
-
         width="100%"
-
         height="100%"
-
         style="border:0; border-radius: 4px"
-
     />
-
+    
 </div>
